         Reported by Charlie Mason.
       - Fixed bug causing first entity byte to be eaten if the connection
         wasn't persisting. Reported by Sebastien Gaide and Olivier Miel. 
       - Fixed potential NPE with conditional requests.
         Reported by Carolyn Duby.
       - Fixed potential race issues in internal HTTP connector under high
         load. Reported by Leandro Oliveira.
 
- 2.0.4 (2010-12-24)
    - Bugs fixed
	   - Extension headers on responses were now supported by the
	     JAX-RS extension. Reported by Jim Stabile and fix suggested
	     by Simon Temple.
	   - Invalid log traces for connectors without protocols, such as
	     dispatchers, were removed.
	   - Fixed AccessControlException caused by an unnecessary call to
	     System.getProperties(). Reported by Matthias Reichl.
       - The JAXB extension now has better support for classloader.
         Contributed by Eric Hough.
       - Fixed the writing of the Via header.
         Reported by Guido Schmidt.
       - Fixed annotation processing on XStream deserialization.
         Contributed by Bruno Gieder.
       - Fixed parsing of complex types in the OData extension.
         Reported by Alex Bass.
       - Fixed potential IndexOutOfBoundsException when receiving
         chunked content. Reported by Mark Thornton.
       - Fixed ROME 1.0 JAR to use the latest version.
       - Fixed scoring issues between the Atom and XML extension
         for the Feed and Service classes which extend the 
         SaxRepresentation classes.
       - Fixed converter issues with the ROME extension.
       - Fixed SpringBeanFinder throwing misleading exceptions 
         when resource not found. Contributed by Rhett Sutphin.
       - Fixed double-instantiation of prototype resources in
         SpringBeanRouter. Reported by George Calm and 
         contributed by Rhett Sutphin.
       - Fixed status description lost when throwing ResourceException
         inside the deprecated Resource class.